--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Ac123bM845Xx3
+spring.datasource.password=pass
 spring.sql.init.mode=always
