--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #
 # JDBC properties
 #
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=pass
