--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Ac123bM845Xx3
+spring.datasource.password=password
 spring.sql.init.mode=always
