--- a/src/main/resources/application-testing.properties
+++ b/src/main/resources/application-testing.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/testing_directory?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass
 spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data/data.sql
