--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/diploma_directory?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass
 spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
