--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.url=jdbc:mysql://localhost:3306/diploma_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.password=password
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
